XSensor/Peloton-20220817/Peloton-20220817/wrappers/c-sharp/XSCore90.cs

/* XSCore90.cs -- wrapper interface of the 'XSCore90' sensor engine.
  
  Copyright (C) 2010-2022  XSENSOR Technology Corporation. All rights reserved.

  This software is provided 'as-is', without any express or implied
  warranty.  In no event will XSENSOR Technology Corporation be held liable
  for any damages arising from the use of this software.
*/

using System;
using System.Runtime.InteropServices;
using System.Text; // for StringBuilder

// alias for the sensor's unique ID - 64 bits
using SENSORPID = System.UInt64;

// example C to C# struct for other projects
/*
[StructLayout(LayoutKind.Sequential)]
public struct Vertex
{
    public float x;
    public float y;
    public float z;
    public int ID;
}
*/

namespace xsensor
{
    // boolean type to help with marshalling from the C dll
    public enum xbool : byte { FALSE = 0, TRUE };

    public enum EPressureUnit
    {
        ePRESUNIT_MMHG = 0,	// millimeters of mercury
        ePRESUNIT_INH2O,	// inches of water
        ePRESUNIT_PSI,		// pounds/sq.inch
        ePRESUNIT_KPA,		// kilopascals
        ePRESUNIT_KGCM2,	// kgf/cm^2
        ePRESUNIT_ATM,		// atmospheres
        ePRESUNIT_NCM2,		// newtons/cm^2
        ePRESUNIT_MBAR,		// millibars
        ePRESUNIT_NM2,		// Newton/meter^2
        ePRESUNIT_GCM2,		// grams/cm^2
        ePRESUNIT_BAR,		// bar

        ePRESUNIT_RAW = 255
    };

    public enum EXSErrorCodes
    {
        eXS_ERRORCODE_OK,							// Function ran normally

        eXS_ERRORCODE_BADPARAMETER_OUTOFRANGE,		// a parameter is out of range
        eXS_ERRORCODE_BADPARAMETER_NULL,			// null parameter - pass in a variable/buffers address
        eXS_ERRORCODE_BADPARAMETER_INVALID_SENSOR_PID,	// either the PID is pad, or the sensor was not configured

        eXS_ERRORCODE_CALFILE_LOADFAILED,			// calibration file failed to load - likely the file wasn't found
        eXS_ERRORCODE_CALFILE_DOESNOTMATCHSENSOR,	// the calibration file does not match the sensor

        eXS_ERRORCODE_CONFIGURATION_NOTCOMPLETE,	// Call XS_ConfigComplete() to complete the sensor configuration.
        eXS_ERRORCODE_CONFIGURATION_NOSENSORS,		// no sensors have been added to the sample config via XS_AddSensorToConfig(), or could not be added
        eXS_ERRORCODE_CONFIGURATION_FAILCREATEXSN,	// Could not create the XSN file. Check that the path is valid and the location can be written too.

        eXS_ERRORCODE_SENSORS_SENSORNOTFOUND,		// either the sensor isn't enumerated, or the PID is invalid
        eXS_ERRORCODE_SENSORS_RAWONLY,				// XS_GetPressure() called, but no calibration files have been loaded.  Only raw data is available.
        eXS_ERRORCODE_SENSORS_NOSAMPLE,				// XS_Sample() has not been called yet, or it has not succeeded in retrieving a sample

        eXS_ERRORCODE_SENSORS_CONNECTIONLOST,		// XS_Sample failed because a sensor was disconnected or USB power reset
        eXS_ERRORCODE_SENSORS_SAMPLETIMEOUT,		// XS_Sample failed because the sensor timed out while reading
        eXS_ERRORCODE_SENSORS_SAMPLEFAILED,			// XS_Sample failed for reasons unknown

        eXS_ERRORCODE_SENSORS_NOCONNECTION,			// Calling XS_Sample() without first calling to XS_OpenConnection()?
        eXS_ERRORCODE_SENSORS_CONNECTFAILED,		// It's possible that one of the sensors has become disconnected.  Check connections.

        eXS_ERRORCODE_MEMORYALLOCATION_FAILED,		// the system seems to be running low on memory, or the DLL could not allocate some memory

        eXS_ERRORCODE_LIBRARY_NOT_INITIALIZED,		// The DLL library has not been initialized

        eXS_ERRORCODE_AUTOCONFIG_SENSORNOTFOUND,	// no sensors found during enumeration - please check XS_GetLastEnumState()

        eXS_ERRORCODE_COULDNOTCREATECAPTUREFILE,	// Could not create the target capture file

        eXS_ERRORCODE_SIMFILE_LOADFAIL,				// A problem occured while loading the simulation file.  The path might be incorrect, or the file cannot be opened.  (Try loading it in the XSENSOR desktop software.)
        eXS_ERRORCODE_SIM_FUNCTION_NA,				// The DLL function is not available or does nothing while in simulation mode.

        eXS_ERRORCODE_SIM_CALIBRATED_ONLY,			// The simulation only supports calibrated (pressure) data
        eXS_ERRORCODE_SIM_RAW_ONLY,					// The simulation only supports raw (non-pressure) data

        eXS_ERRORCODE_MANCAL_FUNCTION_NOTSET,		// The manaul calibration state is not set, which this function requires.
        eXS_ERRORCODE_MANCAL_FUNCTION_NA,			// The DLL function is not available or does nothing while in manual calibration mode.
        eXS_ERRORCODE_CALIBRATION_AUTOCACHE,		// This calibration function is disabled while the calibration auto-cache is enabled via XS_SetCalibrationFolder.
    };

    // this is a bit mask - any number of these bits might be set
    public enum EEnumerationError
    {
        eENUMERROR_OK = 0x00000000,	// no errors detected

        eENUMERROR_NOSPKSDETECTED = 0x00000001,	// no SPKS appear in the computer
        eENUMERROR_OPENDEVICEFAIL = 0x00000002,	// The SPK could not be opened with CreateFile
        eENUMERROR_OPENDEVICEFAIL_PROCESSLOCK = 0x00000004,	// The SPK could not be opened because some other process has it opened
        eENUMERROR_HIDDEVICEENUMFAIL = 0x00000008,	// The HID device enumerate failed - very low level

        eENUMERROR_MISSINGCON = 0x00000010,	// The SPK is not connected to a sensor pad
        eENUMERROR_MISSINGDLLCODE = 0x00000020,	// The sensor does not have a DLL code
        eENUMERROR_MISMATCHEDDLLCODE = 0x00000040,	// The sensor's DLL code does not match this DLL
        eENUMERROR_MISSINGPROFILE = 0x00000080,	// The sensors profile is not supported by this DLL

        eENUMERROR_MISSINGCHILDSPKS = 0x00000100,	// This multi-SPK sensor is missing SPKS ports 2 to N
        eENUMERROR_MISSINGPARENTSPK = 0x00000200,	// This multi-SPK sensor is missing SPK on port 1
        eENUMERROR_MISMATCHEEDFIRMWARE = 0x00000400,	// This multi-SPK sensor must the same firmware on each SPK
        eENUMERROR_MISMATCHEDSPKTYPES = 0x00000800,	// This multi-SPK sensor must the same SPK types on each port (either XS PRO, or just XS)

        eENUMERROR_CONNECTIONSENSE = 0x00001000,	// This sensor pad is not properly plugged into the SPK - or there is a hardware problem with the sensor
        eENUMERROR_CONREQUIRESNEWERFIRMWARE = 0x00002000,	// The sensor pad requires SPK(s) with firmware 1.3 or better

        // the rest of the bits are reserved
    };

    
    public class XSCore90
    {
        // replace "XSCore90" with "XSCore90x64" if you're using the 64 bit dll

        // ===========================================================================
        //	Library initialization/deinitialization
        // ===========================================================================

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern EXSErrorCodes XS_GetLastErrorCode();
        // Retrieves the last error code.  Check this value when a function reports a failure.  (see enum EXSErrorCodes below).

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_InitLibrary(xbool bThreadMode);
        // Initialize the XS software engine.  This must be the first call to the XS Library
        // Use bThreadMode if you want the DLL to sample independently of the call to XS_Sample.
        // Otherwise set to boolFALSE to have finer control over the sample rate.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_ExitLibrary();
        // Uninitializes the XS software engine, freeing all allocated resources.  This should be the last call to the XS Library

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetVersion(ref ushort major, ref ushort minor, ref ushort build, ref ushort revision);
        // fetches the DLL version - major.minor.build.revision

        // ===========================================================================
        //	Sensor Enumeration and Information
        // ===========================================================================

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern uint XS_EnumSensors();
        // Scan the computer for available sensors

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XS_SetAllowFastEnum(xbool bAllow);
        // When enabled, the DLL skips looking for new sensors and only attempts to talk to sensors it already knows about.
        // Use this when you've found a sensor, but lost its connection and want to rescan for it without the delay of looking
        // for new sensors.
        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetAllowFastEnum();


        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern EEnumerationError XS_GetLastEnumState();
        // Retrieves the EEnumerationError error state.  This value is only valid after a call to XS_EnumSensors

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern uint XS_EnumSensorCount();
        // Returns a count of the number of sensors found during the EnumSensors() call.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern SENSORPID XS_EnumSensorPID(uint nEnumIndex);
        // Returns the sensor PRODUCT ID at the indexed location of the enumerated sensors list.  The index is zero based.
        // The SENSORPID is 64 bit value.  If the value is 0, then the function call failed.  (Likely an index out of array bounds condition.)

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern ushort XS_GetSerialFromPID(SENSORPID spid);
        // returns a sensor's 4 digit serial number.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetSensorDimensions(SENSORPID spid, ref ushort nRows, ref ushort nColumns);
        // returns the sensors sensel dimensions


        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_GetSensorName(SENSORPID spid, ref uint bufferSize, StringBuilder sensorName);
        // If sensorName is NULL, the size of the required buffer (in bytes) is calculated and returned in bufferSize.
        /* example C# call
            uint bufferSize = 0;
            XS_GetSensorName(spid, ref bufferSize, null);
            var sb = new StringBuilder((int)bufferSize);
            XS_GetSensorName(spid, ref bufferSize, sb);
            string sensorName = sb.ToString();
         */

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetSenselDims(SENSORPID spid, ref float nWidthCM, ref float nHeightCM);
        // returns a single sensel's physical dimensions in centimetres. Only usable after a sensor configuration is created.


        // Is this an X4 sensor?
        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_IsX4Sensor(SENSORPID spid);

        // Sets bFootSensor to xTRUE if the sensor is an X4 foot sensor. Sets bLeftFoot to xTRUE if its a left foot sensor, and xFALSE for right sensors
        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_IsX4FootSensor(SENSORPID spid, ref xbool bFootSensor, ref xbool bLeftFoot);
